# amplifier

./: .gitignore  AGENTS.md  FINAL_STATUS.md  GETTING_STARTED.md  Makefile  NEXT_STEPS.md  PROGRESS_REPORT.md  README.md  RUST_CONVERSION_PLAN.md  SESSION_SUMMARY.md  bundle.md  pyproject.toml
.amplifier/: manifest.json  update_state.json
.claude/agents/: parallel-orchestrator.md
.claude/commands/: explore-variants.md  parallel-experiment.md  parallel-explore.md
.claude/tools/: on_code_change_hook.sh
agents/: amplifier-expert.md
ai_context/claude_code/sdk/: CLAUDE_CODE_SDK_TYPESCRIPT.md
ai_working/: MODULE_DEVELOPMENT_LESSONS.md  RateLimiting  SCENARIO_MIGRATION_GUIDE.md  parallel_orchestration_path1.md
ai_working/archive/2025-10-27_blog-web-interface/: COMPLETE_AUDIT.md  EXECUTION_BUGS.md  code_plan.md  docs_index.txt  docs_status.md  impl_status.md  plan.md  test_report.md
ai_working/ddd/: FINAL_STATUS.md  code_plan.md  docs_index.txt  docs_status.md  implementation_report.md  plan.md  research_findings.md  test_report.md
ai_working/ddd/templates/app-transcribe/: .env.example
amplifier/ccsdk_toolkit/templates/: tool_template.py
amplifier/cli/: __init__.py  __main__.py  models.py
amplifier/cli/commands/: __init__.py  completions.py  config.py  init.py  install.py  list.py  remove.py  update.py  worktree.py
amplifier/cli/core/: __init__.py  completions.py  decorators.py  errors.py  file_utils.py  github.py  manifest.py  network.py  output.py  paths.py  progress.py  resources.py  rollback.py  updates.py  version.py
amplifier/knowledge_integration/: entity_resolver.py
amplifier/parallel_experiment/: README.md  __init__.py  orchestrator.py  worktree_manager.py
assets/branding/: README.md
assets/branding/icons/: Amplifier.icns
behaviors/: amplifier-expert.yaml
context/: development-hygiene.md  ecosystem-overview.md  recipes-usage.md
docs/: DEVELOPER.md  LOCAL_DEVELOPMENT.md  MIGRATION_COLLECTIONS_TO_BUNDLES.md  MODULES.md  MODULE_DEVELOPMENT.md  README.md  REPOSITORY_RULES.md  TESTING_GUIDE.md  USER_GUIDE.md  USER_ONBOARDING.md
docs/design/: README.md
outlines/: development-hygiene_outline.json
ratelimit/: CSHARP_TO_RUST_COMPONENT_MAPPING.md  Cargo.toml  README.md
ratelimit/src/: lib.rs
ratelimit/src/core/: error.rs  lease.rs  metadata.rs  mod.rs  statistics.rs  traits.rs
ratelimit/src/limiters/: chained.rs  concurrency.rs  fixed_window.rs  mod.rs  sliding_window.rs  token_bucket.rs
ratelimit/src/partitioned/: mod.rs  partitioned_impl.rs
ratelimit/src/queue/: mod.rs
ratelimit/src/utils/: mod.rs
ratelimit/tests/: concurrency_tests.rs  token_bucket_tests.rs
ratelimit/tests/common/: mod.rs  test_utils.rs
recipes/: amplifier-ecosystem-audit.yaml  document-generation.yaml  ecosystem-activity-report.yaml  outline-generation-from-doc.yaml  repo-activity-analysis.yaml  repo-audit.yaml
scenarios/: __init__.py
scenarios/article_illustrator/: README.md  models.py
scenarios/article_illustrator/content_analysis/: core.py
scenarios/article_illustrator/markdown_update/: core.py
scenarios/blog_writer/: README.md
scenarios/knowledge_assist/: HOW_TO_CREATE_YOUR_OWN.md  README.md  SPECIFICATION.md  __init__.py  __main__.py  citation_system.py  config.py  content_loader.py  knowledge_retriever.py  main.py  output_generator.py  session.py  synthesis_engine.py
scenarios/knowledge_assist/prompts/: code_analyze.txt  code_augment.txt  code_generate.txt  code_quick.txt  research_analyze.txt  research_augment.txt  research_generate.txt  research_quick.txt
scenarios/parallel_explorer/: HOW_TO_CREATE_YOUR_OWN.md  README.md  __init__.py  content_generator.py  context_manager.py  orchestrator.py  paths.py  pattern_analyzer.py  recover_implementations.py  structure_validator.py  tool_builder.py  worktree_manager.py
scenarios/parallel_explorer/examples/cache_strategy/: README.md
scenarios/parallel_explorer/examples/rate_limiter/: README.md
scenarios/ppt_generator/: HOW_TO_CREATE_YOUR_OWN.md  README.md  __init__.py  __main__.py  main.py  models.py  state.py  template_guide.md
scenarios/ppt_generator/content_analysis/: __init__.py  core.py
scenarios/ppt_generator/diagram_generation/: __init__.py  core.py
scenarios/ppt_generator/feedback_processor/: __init__.py  core.py
scenarios/ppt_generator/image_generation/: __init__.py  core.py
scenarios/ppt_generator/image_prompts/: __init__.py  core.py
scenarios/ppt_generator/layout_preview/: __init__.py  core.py
scenarios/ppt_generator/outline_generation/: __init__.py  core.py
scenarios/ppt_generator/ppt_assembly/: __init__.py  core.py
scenarios/ppt_generator/ppt_builder/: __init__.py  core.py
scenarios/ppt_generator/slide_content/: __init__.py  core.py
scenarios/ppt_generator/template_generator/: __init__.py  core.py
scenarios/ppt_generator/templates/: template_guide.md
scenarios/ppt_generator/tests/: sample_context.md
scenarios/ppt_generator/user_review/: __init__.py  core.py
scenarios/ppt_generator/utils/: __init__.py  prompts.py
scenarios/ppt_generator/visual_planning/: __init__.py  core.py
scenarios/social_posts/: HOW_TO_CREATE_YOUR_OWN.md  README.md  __init__.py  __main__.py  main.py  state.py
scenarios/social_posts/content_analyzer/: __init__.py  core.py
scenarios/social_posts/post_generator/: __init__.py  core.py
scenarios/social_posts/post_reviewer/: __init__.py  core.py
scenarios/social_posts/tests/: sample_article.md
scenarios/style_blender/: HOW_TO_CREATE_YOUR_OWN.md  README.md  __init__.py  __main__.py  main.py  state.py
scenarios/style_blender/content_generator/: __init__.py  core.py
scenarios/style_blender/style_analyzer/: __init__.py  core.py
scenarios/style_blender/style_blender/: __init__.py  core.py
scenarios/style_blender/tests/: test_basic.py
tests/: test_doc_sweep.sh
tests/fixtures/: mocks.py
tests/unit/commands/: test_config.py  test_init.py  test_install.py  test_list.py  test_remove.py  test_update.py  test_worktree.py
tests/unit/core/: test_github.py  test_rollback.py
(+4 files in other folders)
