[tool.poetry]
name = "amplifier"
version = "0.1.0"
description = "Amplifier - AI-powered modular development platform"
authors = ["Microsoft"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/microsoft/amplifier"
documentation = "https://github.com/microsoft/amplifier/blob/main/README.md"
keywords = ["ai", "development", "modular", "assistant", "coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
]

[tool.poetry.scripts]
amplifier = "amplifier_app_cli.main:main"

[tool.poetry.dependencies]
python = "^3.11"
# Core and CLI
amplifier-core = { git = "https://github.com/microsoft/amplifier-core.git", branch = "main" }
amplifier-app-cli = { git = "https://github.com/microsoft/amplifier-app-cli.git", branch = "main" }

# Default module set - the reference implementations
amplifier-module-loop-basic = { git = "https://github.com/microsoft/amplifier-module-loop-basic.git", branch = "main", optional = true }
amplifier-module-context-simple = { git = "https://github.com/microsoft/amplifier-module-context-simple.git", branch = "main", optional = true }
amplifier-module-provider-anthropic = { git = "https://github.com/microsoft/amplifier-module-provider-anthropic.git", branch = "main", optional = true }
amplifier-module-provider-openai = { git = "https://github.com/microsoft/amplifier-module-provider-openai.git", branch = "main", optional = true }
amplifier-module-tool-filesystem = { git = "https://github.com/microsoft/amplifier-module-tool-filesystem.git", branch = "main", optional = true }
amplifier-module-tool-bash = { git = "https://github.com/microsoft/amplifier-module-tool-bash.git", branch = "main", optional = true }

[tool.poetry.extras]
# Module bundles for different use cases
default = [
    "amplifier-module-loop-basic",
    "amplifier-module-context-simple",
    "amplifier-module-tool-filesystem",
    "amplifier-module-tool-bash"
]
anthropic = [
    "amplifier-module-provider-anthropic"
]
openai = [
    "amplifier-module-provider-openai"
]
all = [
    "amplifier-module-loop-basic",
    "amplifier-module-context-simple", 
    "amplifier-module-provider-anthropic",
    "amplifier-module-provider-openai",
    "amplifier-module-tool-filesystem",
    "amplifier-module-tool-bash"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
